added admin apis
